# GHTermial

./: .gitignore  .qmake.stash  CMakeLists.txt  GHTermial.pro  GHTermial.pro.user.ee31e9a  GHTermial_673.pro  GHTermial_673.pro.user.0706085  GHTermial_673.pro.user.vLkwbg  GHTermial_673.qtvscr  GHTermial_673.vcxproj  GHTermial_673.vcxproj.filters  GHTermial_673_resource.rc  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  channel.h  clientinfo.cpp  clientinfo.h  en_US.qm  en_US.ts  img.qrc  lang_Arabic.qm  lang_Arabic.ts  lang_Chinese.qm  lang_Chinese.ts  lang_Chinses.ts  lang_English.qm  lang_English.ts  lang_French.qm  lang_French.ts  lang_German.qm  lang_German.ts  lang_Hindi.qm  lang_Hindi.ts  lang_Japanese.qm  lang_Japanese.ts  lang_Portuguese.qm  lang_Portuguese.ts  (+17 more)
.history/src/: Dataproc_20240930134655.h  Dataproc_20240930135115.h  Dataproc_20240930135456.h  Dataproc_20240930135705.h  Dataproc_20240930135804.h  Dataproc_20240930140054.h  Dataproc_20240930140359.h  Dataproc_20240930140512.h  Dataproc_20240930140813.h  Dataproc_20240930141541.h  Dataproc_20240930141621.h  Dataproc_20240930141644.h  Dataproc_20240930141649.h  Dataproc_20240930141807.h  Dataproc_20240930141837.h  Dataproc_20240930142358.h  Dataproc_20240930145522.cpp  Dataproc_20240930150202.cpp  Dataproc_20240930150209.cpp  Dataproc_20240930152207.cpp  Dataproc_20240930153438.cpp  Dataproc_20240930163801.cpp  autoconn_20230403200803.h  autoconn_20240930161127.h  autoconn_20240930161243.h  autoconn_20240930161358.h  autoconn_20240930161402.h  autoconn_20240930161405.h  autoconn_20240930161510.h  autoconn_20240930161818.h  qmllanguge_20230302234406.h  qmllanguge_20240930161905.h  qmllanguge_20240930161921.h
.history/src/Serial/: Manager_20240930162206.h  Manager_20240930162347.h
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QComboBox.E730EA3946493D90.idx  (+71 more)
Controller/: SerialController.cpp  SerialController.h  base_controller.h  channel_controller.cpp  channel_controller.h  dmr_controller.h
DAO/: channel_dao.cpp  channel_dao.h  channeldmr_dao.cpp  channeldmr_dao.h  dmr_dao.cpp  dmr_dao.h  tuner_dao.cpp  tuner_dao.h
Delegates/: checkboxdelegate.cpp  checkboxdelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  doublespinboxdelegate.cpp  doublespinboxdelegate.h  spinboxdelegate.cpp  spinboxdelegate.h
Entity/: a_b.cpp  a_b.h  channel.cpp  channel.h  channeldmr.cpp  channeldmr.h  dmr.cpp  dmr.h  stlip.cpp  stlip.h
Service/: SerialCommandManager.cpp  SerialCommandManager.h  SerialPortManager.cpp  SerialPortManager.h  channel_service.cpp  channel_service.h  dmr_service.cpp  dmr_service.h  tuner_service.cpp  tuner_service.h
Tools/: serialporttools.cpp  serialporttools.h  tcptools.cpp  tcptools.h  tools.cpp  tools.h
View/: channel_view.cpp
assets/: assets.qrc  translator.qrc
assets/qml/: NaviBar.qml  UI.qml  main.qml
assets/qml/Widgets/: CellView.qml  CellViewBasic.qml  ResizableColumnHeader.qml  Terminal.qml
assets/qml/Windows/: FreqWriteUI.qml
assets/qml/delegate/: HeaderDelegate.qml
debug/: GHTermial_673.exe.recipe  GHTermial_673.ilk  GHTermial_673.vcxproj.FileListAbsolute.txt  moc_channel.cpp  moc_clientinfo.cpp  moc_dmr.cpp  moc_termial.cpp  moc_tools.cpp  object_script.GHTermial_673.Debug  qrc_language.cpp
debug/GHTermial_673.tlog/: CL.10004.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  GHTermial_673.lastbuildstate  GHTermial_673.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.write.1u.tlog
debug/qt/: qtvars.xml
debug/qt/qmake/: qtvars.pro  qtvars.vcxproj
include/core/: application.h  config_manager.h
include/models/: channel_model.h
include/services/: serial_service.h
include/utils/: protocol_utils.h
include/widgets/: main_window.h
language/: lang_Arabic.qm  lang_Arabic.ts  lang_Chinese.qm  lang_Chinese.ts  lang_English.qm  lang_English.ts  lang_French.qm  lang_French.ts  lang_German.qm  lang_German.ts  lang_Hindi.qm  lang_Hindi.ts  lang_Japanese.qm  lang_Japanese.ts  lang_Portuguese.qm  lang_Portuguese.ts  lang_Russian.qm  lang_Russian.ts  lang_Spanish.qm  lang_Spanish.ts
release/: moc_serialporttools.cpp  moc_tcptools.cpp  object_script.GHTermial_673.Release  qrc_img.cpp
release/GHTermial_673.tlog/: GHTermial_673.write.1u.tlog  moc.write.1u.tlog  uic.read.1u.tlog
release/qt/qmake/: props.txt  qtvars.pro  qtvars.vcxproj  qtvars.xml
resources/: resources.qrc  translations.qrc
resources/styles/: dark.qss
src/: AppInfo.h  Dataproc.cpp  Dataproc.h  Dataproc.h.autosave  JsonUtils.hpp  autoconn.cpp  main.cpp  qmllanguge.cpp
src/Serial/: Console.cpp  FileTransmission.cpp  Manager.cpp
src/core/: application.cpp
tests/: CMakeLists.txt
view/: tuner_view.cpp  tuner_view.h
